--- a/webui/src/App.css
+++ b/webui/src/App.css
@@ -1,41 +1,142 @@
+html,
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+  width: 100%;
+  height: 100%;
   text-align: center;
+  font-family: "Barlow Semi Condensed", sans-serif;
+  color: #f3f3f3;
+  font-size: 30px;
+  background: conic-gradient(from 90deg at 1px 1px, #292929 90deg, #434343 0) 0
+    0/50px 50px;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
+.titleContainer {
+  display: flex;
+  justify-content: center;
 }
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.title {
+  font-family: "Righteous", sans-serif;
+  font-size: 50px;
+  padding: 10px;
+  color: #292929;
+  width: fit-content;
+  text-transform: uppercase;
+  background-clip: text;
+  background-image: linear-gradient(
+    to right,
+    #d92027,
+    #ff9234,
+    #ffcd3c,
+    #35d0ba
+  );
+  -webkit-text-stroke-color: transparent;
+  -webkit-text-stroke-width: 5px;
 }
 
 .card {
-  padding: 2em;
+  /* padding: 2em; */
+}
+.scores--title {
+  font-family: "Righteous", sans-serif;
+  font-size: 40px;
+  padding: 20px;
+  color: #292929;
+  display: inline-block;
+  text-transform: uppercase;
+  background-clip: text;
+  background-image: linear-gradient(
+    to right,
+    #d92027,
+    #ff9234,
+    #ffcd3c,
+    #35d0ba
+  );
+  -webkit-text-stroke-color: transparent;
+  -webkit-text-stroke-width: 5px;
 }
 
-.read-the-docs {
-  color: #888;
+.score0 {
+  padding: 0.2rem;
+  display: inline-block;
+  background: linear-gradient(to right, #3a86ff, #4cc9f0);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.score1 {
+  padding: 0.2rem;
+  background: linear-gradient(to right, #ffbe0b, #fb5607);
+  display: inline-block;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.score2 {
+  padding: 0.2rem;
+  background: linear-gradient(to right, #38a3a5, #80ed99);
+  display: inline-block;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+.score3 {
+  padding: 0.2rem;
+  background: linear-gradient(to right, #ff006e, #8338ec);
+  display: inline-block;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.score4 {
+  padding: 0.2rem;
+  background: linear-gradient(to right, #8338ec, #3a86ff);
+  display: inline-block;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+.score5 {
+  padding: 0.2rem;
+  background: linear-gradient(to right, #ffff3f, #55a630);
+  display: inline-block;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+.connectButton {
+  font-family: "Barlow Semi Condensed", sans-serif;
+  width: 90px;
+  height: 40px;
+  font-size: 15px;
+  font-weight: bold;
+  color: #f3f3f3;
+  background-color: #292929;
+  border-radius: 8px;
+  cursor: pointer;
+  margin: 20px;
+}
+.waivy {
+  padding: 20px;
+}
+.waivy span {
+  position: relative;
+  display: inline-block;
+  color: #fff;
+  animation: waivy 4s infinite;
+  animation-delay: calc(0.1s * var(--i));
+}
+
+@keyframes waivy {
+  0%,
+  40%,
+  100% {
+    transform: translateY(0);
+  }
+  20% {
+    transform: translateY(-20px);
+  }
+}
+
+.connexionManager {
+  position: absolute;
+  bottom: 0;
+  display: flex;
+  width: 100%;
 }
