fix center of table

--- a/webui/src/App.css
+++ b/webui/src/App.css
@@ -207,8 +207,10 @@ html,
 .tableHSLeft {
   text-align: right;
   padding: 0 10px;
+  width: 50%;
 }
 .tableHSRight {
   text-align: left;
   padding: 0 10px;
+  width: 50%;
 }
